tests/cases/literals/errors/byte-char-too-long.ari
fn main() -> i64 {
  let value = 'ab';
  return value as i64;
}
